Create a directory where custom libs can be placed to avoid using `java.ext.dirs`
Signed-off-by: arvindkandhare <arvind.kandhare@emc.com>